# myfinance

./: .gitignore  .prettierrc.json  .pylintrc  Makefile  README.md  import.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
api/: apps.py  urls.py
api/docs/: insomnia_collection.json
api/serializers/: account_serializer.py  antecipation_serializer.py  bank_serializer.py  base_serializer.py  card_serializer.py  cartao_serializer.py  categoria_serializer.py  category.py  category_serializer.py  default_serializer.py  dream.py  file_handler_serializer.py  movimentacao_serializer.py  next_month_view_serializer.py  subcategoria_serializer.py  subcategory.py  subcategory_serializer.py  transaction.py  transaction_serializer.py
api/services/: account_services.py  bank_services.py  card_services.py  categoria_services.py  category_services.py  default_services.py  extract_services.py  file_handler_services.py  invoice_services.py  next_month_view_services.py  subcategoria_services.py  subcategory_services.py  transaction_services.py  websocket_services.py
api/views/: account.py  account_views.py  antecipation_views.py  authentication.py  bank.py  card.py  (+23 more)
balanco/: apps.py  models.py
clients/: transaction_classifier.py
financeiro/: settings.py  urls.py
investments/: admin.py  apps.py  models.py  signals.py  urls.py
login/: manager.py  models.py  repository.py  urls.py  views.py
myfinance/: asgi.py  settings.py  urls.py
server-conf/: info.txt
statement/: admin.py  apps.py  authentication.py  models.py  signals.py
(+586 files in other folders)
